name:                create-plans
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://github.com/LeastAuthority/create-plans#readme
license:             BSD3
license-file:        LICENSE
author:              Least Authority TFA GmbH
maintainer:          jean-paul@leastauthority.com
copyright:           BSD3
category:            Web
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Lib
  build-depends:       base >= 4.7 && < 5
                     , aeson
                     , aeson-pretty
                     , bytestring
                     , utf8-string
                     , base64-bytestring
                     , servant-server
                     , servant-client
                     , http-types
                     , http-client
                     , http-client-tls
                     , http-api-data
                     , mtl
                     , wai
                     , warp
  default-language:    Haskell2010

executable create-plans-exe
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , argparser
                     , create-plans
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/LeastAuthority/create-plans
